[package]
name = "wraith"
version = "0.1.0"
authors = ["Franklin Webber <franklin.webber@gmail.com>"]

[dependencies]
rocket = "0.3.8"
rocket_codegen = "0.3.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]